--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 Affordable
               </h3>
               <p class="highlight__para">
-                Get your hands on popular books for as little as $10.
+                Get your hands on popular books for as little as Rupees 500.
               </p>
             </div>
           </div>
@@ -126,7 +126,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 890</span> NPR 745
               </div>
             </div>
             <div class="book">
@@ -144,7 +144,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                NPR 2055
               </div>
             </div>
             <div class="book">
@@ -162,7 +162,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 3450</span> NPR 1787
               </div>
             </div>
             <div class="book">
@@ -180,7 +180,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 1400</span> NPR 675
               </div>
             </div>
           </div>
@@ -210,7 +210,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 1500</span> NPR 755
               </div>
             </div>
             <div class="book">
@@ -228,7 +228,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 1750</span> NPR 895
               </div>
             </div>
             <div class="book">
@@ -246,7 +246,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 2600</span> NPR 1050
               </div>
             </div>
             <div class="book">
@@ -264,7 +264,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 1785</span> NPR 987
               </div>
             </div>
             <div class="book">
@@ -282,7 +282,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                <span class="book__price--normal">NPR 2090</span> NPR 863
               </div>
             </div>
             <div class="book">
@@ -300,7 +300,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                NPR 1785
               </div>
             </div>
             <div class="book">
@@ -318,7 +318,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                NPR 855
               </div>
             </div>
             <div class="book">
@@ -336,7 +336,7 @@
                 <i class="fas fa-star-half-alt"></i>
               </div>
               <div class="book__price">
-                <span class="book__price--normal">$59.95</span> $14.95
+                NPR 965
               </div>
             </div>
           </div>
